--- a/index.html
+++ b/index.html
@@ -8,22 +8,15 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <wct-3d-scene camera-x="2.5vw" camera-y="-2vw" camera-z="5vw">
+    <wct-3d-scene camera-x="2.5" camera-y="-2" camera-z="5">
+      <wct-box x="0" y="0" z="0" width="1" height="1" length="1"></wct-box>
       <wct-box
-        x="0vw"
-        y="0vw"
-        z="0vw"
-        width="1vw"
-        height="1vw"
-        length="1vw"
-      ></wct-box>
-      <wct-box
-        x="1vw"
-        y="1vw"
-        z="-1vw"
-        width="1vw"
-        height="1vw"
-        length="1vw"
+        x="1"
+        y="1"
+        z="-1"
+        width="1"
+        height="1"
+        length="1"
         hue="10"
       ></wct-box>
     </wct-3d-scene>
