--- a/index.html
+++ b/index.html
@@ -9,16 +9,11 @@
   </head>
   <body>
     <wct-3d-scene camera-x="2.5" camera-y="-2" camera-z="5">
-      <wct-box x="0" y="0" z="0" width="1" height="1" length="1"></wct-box>
-      <wct-box
-        x="1"
-        y="1"
-        z="-1"
-        width="1"
-        height="1"
-        length="1"
-        hue="10"
-      ></wct-box>
+      <wct-box x="0" y="0" z="0"></wct-box>
+      <wct-box x="1" y="1" z="-1" hue="10"></wct-box>
+      <wct-box x="2" y="1" z="-1" hue="120"></wct-box>
+      <wct-box x="2" y="0" z="-2" width="2" hue="60"></wct-box>
+      <wct-box x="1" y="0" z="-2" hue="240"></wct-box>
     </wct-3d-scene>
   </body>
 </html>
