--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <wct-3d-scene camera-x="2.5" camera-y="-2" camera-z="5">
-      <wct-box x="0" y="0" z="0"></wct-box>
-      <wct-box x="1" y="1" z="-1" hue="10"></wct-box>
-      <wct-box x="2" y="1" z="-1" hue="120"></wct-box>
-      <wct-box x="2" y="0" z="-2" width="2" hue="60"></wct-box>
-      <wct-box x="1" y="0" z="-2" hue="240"></wct-box>
+    <wct-3d-scene id="scene" camera-x="2.5" camera-y="-2" camera-z="5">
     </wct-3d-scene>
   </body>
 </html>
