--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <title>3D Web components</title>
     <script src="webcomponents/wct-box.js"></script>
     <script src="webcomponents/wct-3d-scene.js"></script>
+    <script src="webcomponents/wct-floor.js"></script>
     <script src="helpers/3d-helpers.js"></script>
     <script src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <wct-3d-scene id="scene" camera-x="2.5" camera-y="-2" camera-z="5">
+    <wct-3d-scene id="scene" camera-x="1.5" camera-y="-3" camera-z="5">
+      <div class="three-d-container" id="boxes"></div>
     </wct-3d-scene>
   </body>
 </html>
