Init camera position from JS

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <wct-3d-scene id="scene" camera-x="1.5" camera-y="-3" camera-z="5">
+    <wct-3d-scene id="scene">
       <div class="three-d-container" id="boxes"></div>
     </wct-3d-scene>
   </body>
