--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="webcomponents/wct-box.js"></script>
     <script src="webcomponents/wct-3d-scene.js"></script>
     <script src="webcomponents/wct-floor.js"></script>
+    <script src="webcomponents/wct-color-picker.js"></script>
     <script src="helpers/3d-helpers.js"></script>
     <script src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -12,5 +13,6 @@
     <wct-3d-scene id="scene">
       <div class="three-d-container" id="boxes"></div>
     </wct-3d-scene>
+    <wct-color-picker id="color-picker"></wct-color-picker>
   </body>
 </html>
